[short summary of changes] Add new files [Describe previous functionality and its issues] [Describe current functionality] [Describe reasoning behind the chosen solution]

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -154,5 +154,6 @@
   main,
   hr {
     max-width: 75vw;
+    margin: auto;
   }
 }
